Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -475,7 +475,7 @@ header.bk-header {
         display: inline-block;
         padding:5px 0px;
         margin:0px auto;
-        display:table;
+        width: 100%;
         @media @tablet {
             background-color: transparent;
             margin-right:0;
@@ -486,7 +486,6 @@ header.bk-header {
             }
         }
         ul {
-            float: right;
             text-align: center;
             padding: 0;
             @media @tablet {
